--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/home.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/home.html
@@ -9,16 +9,43 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>search</title>
+    <title>Team Matcher</title>
+
+    <style>
+        body {background-color: black;}
+        h1   {
+            color: white;
+            text-align: center;
+        }
+        h2   {
+            color: white;
+            text-align: center;
+        }
+        h3   {
+            color: white;
+            text-align: center;
+        }
+        div   {
+            color: white;
+            text-align: center;
+        }
+        p    {
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
     {%load widget_tweaks%}
     <div class="container">
+        <br><br>
         <h1>TeamMatcher</h1>
         <br><br>
-        <h2>Search !</h2>
+        <h2>Search!</h2>
+        <br><br>
         <h3>{{note}}</h3>
+        <br><br>
         <form method="post" novalidate>
             {% csrf_token %}
 
@@ -27,6 +54,7 @@
                 {{search}}
 
             </div>
+            <br><br>
             <input type="submit" value="SEARCH">
         </form>
     </div>
