--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
@@ -9,16 +9,40 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>search</title>
+    <title>Search Results</title>
+
+    <style>
+        body {background-color: black;}
+        h1   {
+            color: white;
+            text-align: center;
+        }
+        h2   {
+            color: white;
+            text-align: center;
+        }
+        h3   {
+            color: white;
+            text-align: center;
+        }
+        div   {
+            color: white;
+            text-align: center;
+        }
+        p    {
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 
-<body>
+<body style ="background-color:black;">
 
 
     <h1>Search</h1>
     <br><br>
     <h3>{{note}}</h3>
-    <ul>
+    <ul style="color: white">
         {%for sport in sports%}
         <li>{{sport.name}}</li>
         {%endfor%}
