--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
@@ -12,31 +12,38 @@
     <title>Search Results</title>
 
     <style>
-        body {background-color: black;}
-        h1   {
+        body {
+            background-color: black;
+        }
+        
+        h1 {
             color: white;
             text-align: center;
         }
-        h2   {
+        
+        h2 {
             color: white;
             text-align: center;
         }
-        h3   {
+        
+        h3 {
             color: white;
             text-align: center;
         }
-        div   {
+        
+        div {
             color: white;
             text-align: center;
         }
-        p    {
+        
+        p {
             color: white;
             text-align: center;
         }
     </style>
 </head>
 
-<body style ="background-color:black;">
+<body style="background-color:black;">
 
 
     <h1>Search</h1>
