--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
@@ -1,1 +1,81 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Home - Brand</title><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script"><link rel="stylesheet" href="assets/fonts/font-awesome.min.css"></head><body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54" style="--bs-body-bg: #000000;"><nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav"><div class="container"><a class="navbar-brand" href="#page-top">TeamMatcher</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button><div class="collapse navbar-collapse" id="navbarResponsive"><ul class="navbar-nav ms-auto text-uppercase"><li class="nav-item"><a class="nav-link" href="#services">Services</a></li><li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li><li class="nav-item"><a class="nav-link" href="#about">About</a></li><li class="nav-item"><a class="nav-link" href="#team">Team</a></li><li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li></ul></div></div></nav><header class="masthead" style="background-image:url('assets/img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg');"><div class="container"><div class="intro-text"><div class="intro-lead-in"><span style="color: var(--bs-light);font-size: 45px;"><strong>Welcome To TeamMatche</strong>r</span></div><div class="intro-heading text-uppercase"></div></div></div></header><section id="contact" style="background-image:url('assets/img/map-image.png');"><div class="container"><div class="row"><div class="col-lg-12 text-center"><h2 class="text-uppercase section-heading">Contact Us</h2><h3 class="text-muted section-subheading">Lorem ipsum dolor sit amet consectetur.</h3></div></div><div class="row"><div class="col-lg-12"><form id="contactForm" name="contactForm" novalidate="novalidate"><div class="row"><div class="col-md-6"><div class="form-group mb-3"><input class="form-control" type="text" id="name" placeholder="Your Name *" required=""><small class="form-text text-danger flex-grow-1 help-block lead"></small></div><div class="form-group mb-3"><input class="form-control" type="email" id="email" placeholder="Your Email *" required=""><small class="form-text text-danger help-block lead"></small></div><div class="form-group mb-3"><input class="form-control" type="tel" placeholder="Your Phone *" required=""><small class="form-text text-danger help-block lead"></small></div></div><div class="col-md-6"><div class="form-group mb-3"><textarea class="form-control" id="message" placeholder="Your Message *" required=""></textarea><small class="form-text text-danger help-block lead"></small></div></div><div class="w-100"></div><div class="col-lg-12 text-center"><div id="success"></div><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button></div></div></form></div></div></div></section><footer><div class="container"><div class="row"><div class="col-md-4"><span class="copyright">Copyright&nbsp;©TeamMatcher 2022</span></div><div class="col-md-4"><ul class="list-inline social-buttons"><li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li><li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li><li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li></ul></div><div class="col-md-4"><ul class="list-inline quicklinks"><li class="list-inline-item"><a href="#">Privacy Policy</a></li><li class="list-inline-item"><a href="#">Terms of Use</a></li></ul></div></div></div></footer><div class="modal fade text-center portfolio-modal" role="dialog" tabindex="-1" id="portfolioModal1"><div class="modal-dialog modal-lg" role="document"><div class="modal-content"><div class="container"><div class="row"><div class="col-lg-8 mx-auto"><div class="modal-body"><h2 class="text-uppercase">Project Name</h2><p class="text-muted item-intro">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1-full.jpg"><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><ul class="list-unstyled"><li>Date: January 2017</li><li>Client: Threads</li><li>Category: Illustration</li></ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div></div></div></div></div></div></div><div class="modal fade text-center portfolio-modal" role="dialog" tabindex="-1" id="portfolioModal2"><div class="modal-dialog modal-lg" role="document"><div class="modal-content"><div class="container"><div class="row"><div class="col-lg-8 mx-auto"><div class="modal-body"><h2 class="text-uppercase">Project Name</h2><p class="text-muted item-intro">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2-full.jpg"><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><ul class="list-unstyled"><li>Date: January 2017</li><li>Client: Threads</li><li>Category: Illustration</li></ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div></div></div></div></div></div></div><div class="modal fade text-center portfolio-modal" role="dialog" tabindex="-1" id="portfolioModal3"><div class="modal-dialog modal-lg" role="document"><div class="modal-content"><div class="container"><div class="row"><div class="col-lg-8 mx-auto"><div class="modal-body"><h2 class="text-uppercase">Project Name</h2><p class="text-muted item-intro">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3-full.jpg"><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><ul class="list-unstyled"><li>Date: January 2017</li><li>Client: Threads</li><li>Category: Illustration</li></ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div></div></div></div></div></div></div><div class="modal fade text-center portfolio-modal" role="dialog" tabindex="-1" id="portfolioModal4"><div class="modal-dialog modal-lg" role="document"><div class="modal-content"><div class="container"><div class="row"><div class="col-lg-8 mx-auto"><div class="modal-body"><h2 class="text-uppercase">Project Name</h2><p class="text-muted item-intro">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4-full.jpg"><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><ul class="list-unstyled"><li>Date: January 2017</li><li>Client: Threads</li><li>Category: Illustration</li></ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div></div></div></div></div></div></div><div class="modal fade text-center portfolio-modal" role="dialog" tabindex="-1" id="portfolioModal5"><div class="modal-dialog modal-lg" role="document"><div class="modal-content"><div class="container"><div class="row"><div class="col-lg-8 mx-auto"><div class="modal-body"><h2 class="text-uppercase">Project Name</h2><p class="text-muted item-intro">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5-full.jpg"><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><ul class="list-unstyled"><li>Date: January 2017</li><li>Client: Threads</li><li>Category: Illustration</li></ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div></div></div></div></div></div></div><div class="modal fade text-center portfolio-modal" role="dialog" tabindex="-1" id="portfolioModal6"><div class="modal-dialog modal-lg" role="document"><div class="modal-content"><div class="container"><div class="row"><div class="col-lg-8 mx-auto"><div class="modal-body"><h2 class="text-uppercase">Project Name</h2><p class="text-muted item-intro">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6-full.jpg"><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><ul class="list-unstyled"><li>Date: January 2017</li><li>Client: Threads</li><li>Category: Illustration</li></ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div></div></div></div></div></div></div><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
+<html lang="en-US">
+
+<head>
+    <title>Home - TeamMatcher</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Team Matcher</title>
+
+    <style>
+        body {
+            background-color: black;
+        }
+        
+        h1 {
+            color: white;
+            text-align: center;
+        }
+        
+        h2 {
+            color: white;
+            text-align: center;
+        }
+        
+        h3 {
+            color: white;
+            text-align: center;
+        }
+        
+        div {
+            color: white;
+            text-align: center;
+        }
+        
+        p {
+            color: white;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body class="wide">
+    <div id="page" class="hfeed site">
+        <header>
+            <div class="header">
+                <div class="main-head-wrap inner-wrap clearfix">
+                    <div id="header-logo-image">
+
+                    </div>
+                    <div id="header-text" class="">
+                        <h1 id="site-title">
+                            <a href="/" title="team matcher" rel="home">Team Matcher</a>
+                        </h1>
+                        <p>We help you find where you belong</p>
+                    </div>
+                </div>
+        </header>
+        <div class=" main-wrapper ">
+            <div class="single-page clearfix ">
+                <div class="inner-wrap ">
+
+                    <hr>
+                    <div>
+                        {%block content%} {%endblock%}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer id="colophon ">
+            <div class="inner-wrap ">
+
+            </div>
+        </footer>
+        </div>
+</body>
+
+</html>
