--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/home.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/home.html
@@ -1,76 +1,14 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Team Matcher</title>
-
-    <style>
-        body {
-            background-color: black;
-        }
-        
-        h1 {
-            color: white;
-            text-align: center;
-        }
-        
-        h2 {
-            color: white;
-            text-align: center;
-        }
-        
-        h3 {
-            color: white;
-            text-align: center;
-        }
-        
-        div {
-            color: white;
-            text-align: center;
-        }
-        
-        p {
-            color: white;
-            text-align: center;
-        }
-    </style>
-</head>
+{%extends "base.html"%} {% block content%}
 
 <body>
     {%load widget_tweaks%}
     <div class="container">
-        <br><br>
-        <h1>TeamMatcher</h1>
-        <br><br>
         <h2>Search!</h2>
-        <br><br>
         <h3>{{note}}</h3>
-        <br><br>
         <form method=POST novalidate>
             {% csrf_token %} {{search.as_p}}
-
-
-            <br><br>
             <input type="submit" value="SEARCH" class=" btn btn-secondary">
         </form>
     </div>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
 </body>
-
-</html>
+{%endblock%}
