--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
@@ -1,47 +1,4 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Search Results</title>
-
-    <style>
-        body {
-            background-color: black;
-        }
-        
-        h1 {
-            color: white;
-            text-align: center;
-        }
-        
-        h2 {
-            color: white;
-            text-align: center;
-        }
-        
-        h3 {
-            color: white;
-            text-align: center;
-        }
-        
-        div {
-            color: white;
-            text-align: center;
-        }
-        
-        p {
-            color: white;
-            text-align: center;
-        }
-    </style>
-</head>
+{%extends "base.html"%} {% block content%}
 
 <body style="background-color:black;">
 
@@ -50,7 +7,7 @@
     <br><br>
     <h3>{{note}}</h3>
     <ul style="color: white">
-        {%for sport in sports%}
+        {%for sport in mode%}
         <li>{{sport.name}}</li>
         {%endfor%}
     </ul>
@@ -66,5 +23,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
 </body>
-
-</html>
+{%endblock%}
