add picture link (not working ) in base.html

--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
@@ -58,6 +58,8 @@
                         <p>We help you find where you belong</p>
                     </div>
                 </div>
+                <img src="file:///home/kuzie/git/team41-21/team_matcher/kuzie's%20version/teammatcherproject/AMA_EVERTON_LIVERPOOL_RJB_27.jpg" height="500" width="800">
+            </div>
         </header>
         <div class=" main-wrapper ">
             <div class="single-page clearfix ">
@@ -75,7 +77,7 @@
 
             </div>
         </footer>
-        </div>
+    </div>
 </body>
 
 </html>
