--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/search.html
@@ -1,18 +1,58 @@
 {%extends "base.html"%} {% block content%}
 
-<body style="background-color:black;">
+<style>
 
-    <div class="container">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h2>Search!</h2>
-        <form method=POST>
-            {% csrf_token %} {{search.as_ul}}
-            <input type="submit" value="SEARCH" class=" btn btn-secondary">
-        </form>
+    p {
+        text-align: left;
+      }
+
+    ul {
+        text-align: left;
+        display: block;
+      }
+    
+    #wrap {
+        float: left;
+        position: relative;
+        left: 50%;
+        text-align: left;
+    }
+
+    #content {
+        float: left;
+        position: relative;
+        left: -50%;
+        text-align: left;
+    }
+
+    input[type=radio] {
+        width:10px;
+        
+    }
+    label{
+        text-align:left;
+        width: 140px;;
+    }
+</style>
+
+<body style="background-color:black;">
+    <div class="container" >
+        <br><br><br><br><br>
+        <h1>Search!</h1>
+        <br><br>
+        <h5>Select "team" mode if you are a single player looking to join a team</h5>
+        <h5>Select "team member" mode if you are looking for a player to join your team</h5>
+        <h5>Select "compete" mode if you are looking for an individual or team to compete against</h5>
+        <br><br>
+        <div id="wrap">
+            <div id ="content">
+                <form method=POST>
+                    {% csrf_token %} {{search.as_p}}
+                    <br>
+                    <input type="submit" value="SEARCH" class=" btn btn-secondary">
+                </form>
+            </div>
+        </div>
     </div>
 
 </body>
