--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
@@ -55,7 +55,7 @@
                     <li class="nav-item"><a class="nav-link" href="#portfolio">shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">leaderboard</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/gdpr">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
