--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
@@ -52,8 +52,8 @@
                 <ul class="navbar-nav ms-auto text-uppercase">
                     <li class="nav-item"><a class="nav-link" href="/home/">home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/search/">search</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">shop</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">leaderboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/shop/">shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/leaderboard/">leaderboard</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="/gdpr">Privacy Policy</a></li>
                 </ul>
