--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/base.html
@@ -54,6 +54,7 @@
                     <li class="nav-item"><a class="nav-link" href="/search/">search</a></li>
                     <li class="nav-item"><a class="nav-link" href="/shop/">shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="/leaderboard/">leaderboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/register/">register</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="/gdpr">Privacy Policy</a></li>
                 </ul>
