--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/register.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/register.html
@@ -6,7 +6,7 @@
         position: relative;
         left: 50%;
         text-align: left;
-        margin-left: 100px;
+        
     }
     
     #con {
@@ -17,29 +17,33 @@
     }
     
     form {
-        margin-left;
-        100px;
+        text-align: left;
+    }
+    p {
+        text-align: left;
+    }
+    label {
+        text-align: left;
+    }
+    button {
         text-align: left;
     }
 </style>
 
 {% block content %}
 <br><br><br><br> <br><br>
+<h1>REGISTER</h1>
+<br><br>
 <div id="wrap">
     <div id="con">
-        <h1>REGISTER</h1>
-        <br><br>
         <form method="POST">
-
-            {% csrf_token %} {{ form.as_p}}
-            <a href="/gdpr/" target="_blank">
-                <label><input type="checkbox" name="" value="1"> please agree to our privacy policy</label>
-            </a>
+            {% csrf_token %} {{ form.as_p}} 
+            <label><input type="checkbox" name="" value="1">   agree to our privacy policy to continue</label>
             <br>
+            <p><a class="nav-link" href="/gdpr/" target="_blank">click here to read our privacy policy</a></p>
             <br>
-            <br>
-            <button type="submit" class="btn btn-success">Register</button>
-        </form>
+            <button type="submit" class="btn btn-success" style = "text-align:left">Register</button>  
+    </form>          
     </div>
 </div>
 {% endblock %}
