--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/gdpr.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/gdpr.html
@@ -139,7 +139,7 @@
                         <ul>
                             <li>
                                 <p>
-                                    Find the most suitable sport for you.
+                                    Allow other users to find and contact you.
                                 </p>
                             </li>
                             <li>
