Replace gdpr.html

--- a/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/gdpr.html
+++ b/team_matcher/kuzie's version/teammatcherproject/teammatcherapp/templates/gdpr.html
@@ -42,9 +42,9 @@
                         </p>
                     </div>
                     <div>
-                        <p>
+                        <p><b>
                             What data do we collect?
-                        </p>
+                        </p></b>
                     </div>
                     <div>
                         <p>
@@ -78,9 +78,9 @@
                         </ul>
                     </div>
                     <div>
-                        <p>
+                        <p><b>
                             How do we collect your data?
-                        </p>
+                        </p></b>
                     </div>
                     <div>
                         <p>
@@ -115,9 +115,9 @@
                         </ul>
                     </div>
                     <div>
-                        <p>
+                        <p><b>
                             How will we use your data?
-                        </p>
+                        </p></b>
                     </div>
                     <div>
                         <p>
@@ -150,9 +150,9 @@
                         </ul>
                     </div>
                     <div>
-                        <p>
+                        <p><b>
                             How do we store your data?
-                        </p>
+                        </p></b>
                     </div>
                     <div>
                         <p>
@@ -172,84 +172,57 @@
                     </div>
                 </div>
                 <div>
-                    <p>
+                    <p><b>
                         What are your data protection rights?
+                    </p></b>
+                </div>
+                <div>
+                    <p>
+                        Every user is entitled to the following: 
                     </p>
                 </div>
                 <div>
                     <p>
-                        Our team would like to make sure you are fully aware of all of your
-                        data protection rights. Every user is entitled to the following:
+                        The right to access – You have the right to request our team for copies 
+                        of your personal data.
                     </p>
                 </div>
                 <div>
                     <p>
-                        The right to access – You have the right to request our team for copies
-                        of your personal data. We may charge you a small fee for this service.
+                        The right to rectification – You have the right to request that our team
+                        correct any information you believe is inaccurate, or to complete in case 
+                        it is incomplete. 
                     </p>
                 </div>
                 <div>
                     <p>
-                        The right to rectification – You have the right to request that our
-                        team correct any information you believe is inaccurate. You also have
-                        the right to request our team to complete the information you believe
-                        is incomplete.
+                        The right to erasure – You have the right to request that our team erase
+                        your personal data, under certain conditions.
                     </p>
                 </div>
                 <div>
                     <p>
-                        The right to erasure – You have the right to request that our team
-                        erase your personal data, under certain conditions.
-                    </p>
-                </div>
-                <div>
-                    <p>
-                        The right to restrict processing – You have the right to request that
-                        our team restrict the processing of your personal data, under certain
-                        conditions.
+                        The right to restrict processing – You have the right to request that our
+                        team restrict the processing of your personal data, under certain conditions.
                     </p>
                 </div>
                 <div>
                     <p>
                         The right to object to processing – You have the right to object to our
-                        team’s processing of your personal data, under certain conditions.
+                        team’s processing of your personal data, under certain conditions. 
                     </p>
                 </div>
                 <div>
                     <p>
-                        The right to data portability – You have the right to request that our
-                        team transfer the data that we have collected to another organization,
-                        or directly to you, under certain conditions.
+                        The right to data portability – You have the right to request that 
+                        our team transfer the data that we have collected to another 
+                        organization, or directly to you, under certain conditions.
                     </p>
                 </div>
                 <div>
-                    <p>
-                        If you make a request, we have one month to respond to you. If you
-                        would like to exercise any of these rights, please contact us at our
-                        email:
-                    </p>
-                </div>
-                <div>
-                    <p>
-                        Call us at: +447760361624
-                    </p>
-                </div>
-                <div>
-                    <p>
-                        Or email us:
-                        <a
-                            href="mailto:tim005@student.bham.ac.uk"
-                            target="_blank"
-                            rel="noreferrer noopener"
-                        >
-                            tim005@student.bham.ac.uk
-                        </a>
-                    </p>
-                </div>
-                <div>
-                    <p>
+                    <p><b>
                         Cookies
-                    </p>
+                    </p></b>
                 </div>
                 <div>
                     <p>
@@ -265,9 +238,9 @@
                     </p>
                 </div>
                 <div>
-                    <p>
+                    <p><b>
                         How do we use cookies?
-                    </p>
+                    </p></b>
                 </div>
                 <div>
                     <div>
@@ -291,9 +264,9 @@
                         </ul>
                     </div>
                     <div>
-                        <p>
+                        <p><b>
                             What types of cookies do we use?
-                        </p>
+                        </p></b>
                     </div>
                     <div>
                         <p>
@@ -304,9 +277,9 @@
                     </div>
                 </div>
                 <div>
-                    <p>
+                    <p><b>
                         How to manage cookies
-                    </p>
+                    </p></b>
                 </div>
                 <div>
                     <p>
@@ -316,9 +289,9 @@
                     </p>
                 </div>
                 <div>
-                    <p>
+                    <p><b>
                         Changes to our privacy policy
-                    </p>
+                    </p></b>
                 </div>
                 <div>
                     <p>
@@ -328,9 +301,9 @@
                     </p>
                 </div>
                 <div>
-                    <p>
+                    <p><b>
                         How to contact us
-                    </p>
+                    </p></b>
                 </div>
                 <div>
                     <p>
