fix homepage image

--- a/teammatcherapp/templates/home.html
+++ b/teammatcherapp/templates/home.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%} {%load static%} {% block content%} {%load widget_tweaks%}
-<header class="masthead" style=background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%}; height:100%;background-position: center;
+<header class="masthead" style=background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%}); height:100%;background-position: center;
 background-repeat: no-repeat;
-background-size: cover; )>
+background-size: cover;>
     <div class=" container ">
         <div class="intro-text ">
             <div class="intro-lead-in "><span style="color: var(--bs-light);font-size: 45px;"><strong>Welcome To TeamMatcher</strong></span></div>
