--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -47,7 +47,7 @@
         <div id="wrap">
             <div id ="content">
                 <form method=POST>
-                    {% csrf_token %} {{search.as_ul}}
+                    {% csrf_token %} {{search.as_p}}
                     <br>
                     <input type="submit" value="SEARCH" class=" btn btn-secondary">
                 </form>
