--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -1,7 +1,12 @@
 {%extends "base.html"%} {% block content%}
+.custom-radio-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
 <style>
-
+    
     p {
         text-align: left;
       }
