--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -26,7 +26,9 @@
     }
 
     input[type=radio] {
-        width:10px;
+       
+        left: -999em;
+        position: absolute;
         
     }
     label{
