--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -26,9 +26,8 @@
     }
 
     input[type=radio] {
+        length = 10px;
        
-        left: -999em;
-        position: absolute;
         
     }
     label{
