--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%} {% block title %}Create an Account{% endblock %} {% load crispy_forms_tags %}
+{%extends "base.html"%} {% block title %}Create an Account{% endblock %} 
 
 <style>
     #wrap {
