--- a/teammatcherapp/templates/leaderboard.html
+++ b/teammatcherapp/templates/leaderboard.html
@@ -5,7 +5,7 @@
         <br><br><br><br><br>
         <h1>Leader Board</h1>
         <br><br>
-        <p>Its already here!</p>   
+        <p>Coming Soon!</p>   
     </div>
 </body>
 {%endblock%}
