--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -35,7 +35,7 @@
 <h1>REGISTER</h1>
 <br><br>
 <div id="wrap">
-    <div id="con">
+    <div id="content">
         <form method="POST">
             {% csrf_token %} {{ form.as_p}} 
             <label><input type="checkbox" name="" value="1">   agree to our privacy policy to continue</label>
