--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%} {% block content%}
+{%extends "base.html"%} 
 
 <style>
 
@@ -34,6 +34,8 @@
         width: 140px;;
     }
 </style>
+
+{% block content%}
 
 <body style="background-color:black;">
     <div class="container" >
