--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%} 
+{%extends "base.html"%} {% block content%}
 
 <style>
 
@@ -34,8 +34,6 @@
         width: 140px;;
     }
 </style>
-
-{% block content%}
 
 <body style="background-color:black;">
     <div class="container" >
