--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -3,32 +3,36 @@
 
 {% block content %}
 <style>
+    p {
+        text-align: left;
+      }
+
+    ul {
+        text-align: left;
+        display: block;
+      }
+    
     #wrap {
         float: left;
         position: relative;
         left: 50%;
         text-align: left;
-        
     }
-    
+
     #content {
         float: left;
         position: relative;
         left: -50%;
         text-align: left;
     }
-    
-    form {
-        text-align: left;
+
+    input[type=radio] {
+        width:10px;
+        
     }
-    p {
-        text-align: left;
-    }
-    label {
-        text-align: left;
-    }
-    button {
-        text-align: left;
+    label{
+        text-align:left;
+        width: 140px;;
     }
 </style>
 
