--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -48,7 +48,7 @@
             <br>
             <p><a class="nav-link" href="/gdpr/" target="_blank">click here to read our privacy policy</a></p>
             <br>
-            <button type="submit" class="btn btn-success" style = "text-align:left">Register</button>  
+            <button type="submit" class="btn btn-success" style = "text-align:left; width:10px;">Register</button>  
     </form>          
     </div>
 </div>
