--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -32,7 +32,7 @@
     }
     label{
         text-align:left;
-        width: 140px;;
+        width: 140px;
     }
 </style>
 
@@ -44,11 +44,11 @@
     <div id="content">
         <form method="POST">
             {% csrf_token %} {{ form.as_p}} 
-            <label><input type="checkbox" name="" value="1">   agree to our privacy policy to continue</label>
+            <label style="width: 400px;"><input type="checkbox" name="" value="1">   agree to our privacy policy to continue</label>
             <br>
             <p><a class="nav-link" href="/gdpr/" target="_blank">click here to read our privacy policy</a></p>
             <br>
-            <button type="submit" class="btn btn-success" style = "text-align:left; width:10px;">Register</button>  
+            <button type="submit" class="btn btn-success" style = "text-align:left">Register</button>  
     </form>          
     </div>
 </div>
