--- a/teammatcherapp/templates/home.html
+++ b/teammatcherapp/templates/home.html
@@ -2,7 +2,7 @@
 <header class="masthead" style=background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%});>
     <div class=" container ">
         <div class="intro-text ">
-            <div class="intro-lead-in "><span style="color: var(--bs-light);font-size: 45px;"><strong>Welcome To TeamMatcher</strong></span></div>
+            <div class="intro-lead-in "><span style="color: var(--bs-light);font-size: 45px;text-shadow: 2px 2px #000000;"><strong>Welcome To TeamMatcher</strong></span></div>
             <div class="intro-heading text-uppercase "></div>
         </div>
     </div>
