home pic change

--- a/teammatcherapp/templates/home.html
+++ b/teammatcherapp/templates/home.html
@@ -1,5 +1,5 @@
 {%extends "base.html"%} {%load static%} {% block content%} {%load widget_tweaks%}
-<header class="masthead" style=background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%});>
+<header class="masthead" style="width:100%;" background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%});>
     <div class=" container ">
         <div class="intro-text ">
             <div class="intro-lead-in "><span style="color: var(--bs-light);font-size: 45px;text-shadow: 2px 2px #000000;"><strong>Welcome To TeamMatcher</strong></span></div>
