--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -5,6 +5,7 @@
 <html>
 
 <head>
+    <script src="{%static 'bootstrap/js/bootstrap.min.js'%}"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Team matcher</title>
@@ -47,7 +48,7 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54" style="--bs-body-bg: #000000;">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav" style = "height: 70px;">
-        <div class="container"><a class="navbar-brand" href="#page-top">TeamMatcher</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container-fluid"><a class="navbar-brand" href="#page-top">TeamMatcher</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto text-uppercase">
                     <li class="nav-item"><a class="nav-link" href="/home/">home</a></li>
