align navbar text center

--- a/teammatcherapp/templates/search.html
+++ b/teammatcherapp/templates/search.html
@@ -1,6 +1,9 @@
 {%extends "base.html"%} {% block content%}
 
 <style>
+    #mainNav {
+        text-align: center;
+    }
 
     p {
         text-align: left;
