--- a/teammatcherapp/templates/gdpr.html
+++ b/teammatcherapp/templates/gdpr.html
@@ -1,6 +1,9 @@
 {%extends "base.html"%} {% block content%}
 
 <style>
+    #mainNav {
+        text-align: center;
+    }
     #wrap {
         float: left;
         position: relative;
