--- a/teammatcherapp/templates/home.html
+++ b/teammatcherapp/templates/home.html
@@ -1,12 +1,11 @@
 {%extends "base.html"%} {%load static%} {% block content%} {%load widget_tweaks%}
 
 <header class="masthead" style=background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%});>
-    <div class=" container ">
+    <div class=" container " style = "height:100vh;">
         <div class="intro-text ">
             <div class="intro-lead-in "><span style="color: var(--bs-light);font-size: 45px;text-shadow: 2px 2px #000000;"><strong>Welcome To TeamMatcher</strong></span></div>
             <div class="intro-heading text-uppercase "></div>
         </div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </header>
 {%endblock%}
