center nav bar text

--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -53,7 +53,7 @@
         <button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i>
         </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto text-uppercase">
+                <ul class="navbar-nav ms-auto text-uppercase"  style = "text-align: center">
                     <li class="nav-item"><a class="nav-link" href="/home/">home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/search/">search</a></li>
                     <li class="nav-item"><a class="nav-link" href="/shop/">shop</a></li>
