--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -47,11 +47,11 @@
     <div id="content">
         <form method="POST">
             {% csrf_token %} {{ form.as_p}} 
-            <label style="width: 400px;"><input type="checkbox" name="" value="1">   agree to our privacy policy to continue</label>
-            <br>
+            <p style="width: 400px;">By ticking this box you are agreeing to our privacy policy</p>
             <p><a class="nav-link" href="/gdpr/" target="_blank">click here to read our privacy policy</a></p>
             <br>
             <button type="submit" class="btn btn-success" style = "text-align:left">Register</button>  
+            <br><br>
     </form>          
     </div>
 </div>
