--- a/teammatcherapp/templates/home.html
+++ b/teammatcherapp/templates/home.html
@@ -4,6 +4,7 @@
     <div class=" container " style = "height:100vh;">
         <div class="intro-text ">
             <div class="intro-lead-in "><span style="color: var(--bs-light);font-size: 45px;text-shadow: 2px 2px #000000;"><strong>Welcome To TeamMatcher Amelia</strong></span></div>
+            <p>this is some example text</p>
             <div class="intro-heading text-uppercase "></div>
         </div>
     </div>
