--- a/teammatcherapp/templates/searchresult.html
+++ b/teammatcherapp/templates/searchresult.html
@@ -7,7 +7,7 @@
         left: 50%;
         text-align: left;
     }
-
+    
     #content {
         float: left;
         position: relative;
@@ -24,20 +24,18 @@
     <br>
     <ul style="color: white">
         <div id="wrap">
-            <div id ="content">
-                {%for sport in mode%}
-                <h3 style ="text-align:left; display:inline;">{{sport.name}}   </h3>
+            <div id="content">
+                {%for sport in city%}
+                <h3 style="text-align:left; display:inline;">{{sport.name}} </h3>
                 {%if sport.gender == "M"%}
-                <p style ="text-align:left; display:inline;">   Male, {{sport.age}}</p>
+                <p style="text-align:left; display:inline;"> Male, {{sport.age}}</p>
+                {%endif %} {%if sport.gender == "F"%}
+                <p style="text-align:left; display:inline;"> Female, {{sport.age}}</p>
                 {%endif %}
-                {%if sport.gender == "F"%}
-                <p style ="text-align:left; display:inline;">   Female, {{sport.age}}</p>
-                {%endif %}
-                <p style ="text-align:left">Phone: {{sport.phone}}</p>
-                <p style ="text-align:left">Experience Level: {{sport.experience}}</p>
-                <p style ="text-align:left">Location: {{sport.postcode}}</p>
-                <br>
-                {%endfor%}
+                <p style="text-align:left">Phone: {{sport.phone}}</p>
+                <p style="text-align:left">Experience Level: {{sport.experience}}</p>
+                <p style="text-align:left">Location: {{sport.postcode}}</p>
+                <br> {%endfor%}
             </div>
         </div>
     </ul>
