--- a/teammatcherapp/templates/searchresult.html
+++ b/teammatcherapp/templates/searchresult.html
@@ -34,7 +34,7 @@
                 {%endif %}
                 <p style="text-align:left">Phone: {{sport.phone}}</p>
                 <p style="text-align:left">Experience Level: {{sport.experience}}</p>
-                <p style="text-align:left">Location: {{sport.postcode}}</p>
+                <p style="text-align:left">Location: {{sport.city}}</p>
                 <br> {%endfor%}
             </div>
         </div>
