--- a/teammatcherapp/templates/leaderboard.html
+++ b/teammatcherapp/templates/leaderboard.html
@@ -1,11 +1,37 @@
 {%extends "base.html"%} {% block content%}
 
+<style>
+    #wrap {
+        float: left;
+        position: relative;
+        left: 50%;
+        text-align: left;
+    }
+    
+    #content {
+        float: left;
+        position: relative;
+        left: -50%;
+        text-align: left;
+    }
+</style>
+
 <body>
     <div class="container" >
         <br><br><br><br><br>
         <h1>Leader Board</h1>
         <br><br>
-        <p>Coming Soon!</p>   
+        <ul style="color: white">
+            <div id="wrap">
+                <div id="content">
+                    {%for x in pos%}
+                    <h3 style="text-align:left; display:inline;">{{x.name}} </h3>
+                    <p style="text-align:left">Username: {{x.username}}</p>
+                    <p style="text-align:left">Score: {{x.score}}</p>
+                    <br> {%endfor%}
+                </div>
+            </div>
+        </ul> 
     </div>
 </body>
 {%endblock%}
