--- a/teammatcherapp/templates/gdpr.html
+++ b/teammatcherapp/templates/gdpr.html
@@ -1,4 +1,6 @@
-{%extends "base.html"%} {% block content%}
+{%extends "base.html"%} 
+{%block title%}<title>Team Matcher Privacy Policy</title>{%endblock%}
+{% block content%}
 
 <style>
     #mainNav {
