--- a/teammatcherapp/templates/leaderboard.html
+++ b/teammatcherapp/templates/leaderboard.html
@@ -1,4 +1,6 @@
-{%extends "base.html"%} {% block content%}
+{%extends "base.html"%} 
+{%block title%}<title>Team Matcher Leaderboard</title>{%endblock%}
+{% block content%}
 
 <style>
     #wrap {
@@ -19,7 +21,8 @@
 <body>
     <div class="container" >
         <br><br><br><br><br>
-        <h1>Leader Board</h1>
+        <h1>Leaderboard</h1>
+        <p>The score shows how many times each user has won against another player or team they matched with using compete mode</p>
         <br><br>
         <ol style="color: white">
             <div id="wrap">
