--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -1,5 +1,6 @@
-{%extends "base.html"%} {% block title %}Create an Account{% endblock %} 
+{%extends "base.html"%}
 
+{%block title%}<title>Team Matcher Register</title>{%endblock%}
 
 {% block content %}
 <style>
