--- a/teammatcherapp/templates/shop.html
+++ b/teammatcherapp/templates/shop.html
@@ -1,4 +1,8 @@
-{%extends "base.html"%} {% block content%}
+{%extends "base.html"%} 
+
+{%block title%}<title>Team Matcher Shop</title>{%endblock%}
+
+{% block content%}
 
 <body>
     <div class="container" >
