--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     {%block title%}<title>Team Matcher</title>{%endblock%}
+    <link rel="icon" href={%static 'img/football.png'%}>
     <link rel="stylesheet " href="{%static 'bootstrap/css/bootstrap.min.css'%}">
     <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
