change postcode to city in gdpr

--- a/teammatcherapp/templates/gdpr.html
+++ b/teammatcherapp/templates/gdpr.html
@@ -61,7 +61,7 @@
                             <li>
                                 <p>
                                     Personal identification information (name, email address,
-                                    phone number, postcode, age, and gender)
+                                    phone number, city, age, and gender)
                                 </p>
                             </li>
                         </ul>
