--- a/teammatcherapp/templates/home.html
+++ b/teammatcherapp/templates/home.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%} {%load static%} {% block content%} {%load widget_tweaks%}
+{%extends "base.html"%} {%load static%} {% block content%}
 
 <header class="masthead" style=background-image:url({%static 'img/AMA_EVERTON_LIVERPOOL_RJB_27.jpg'%});>
     <div class=" container " style="height:100vh;">
