--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -59,7 +59,11 @@
                     <li class="nav-item"><a class="nav-link" href="/search/">search</a></li>
                     <li class="nav-item"><a class="nav-link" href="/shop/">shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="/leaderboard/">leaderboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/register/">register</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="/profile/">{{user.username}}'s Account</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="/register/">register</a></li>
+                    {% endif %}
                     <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="/gdpr">Privacy Policy</a></li>
                 </ul>
