--- a/teammatcherapp/templates/searchresult.html
+++ b/teammatcherapp/templates/searchresult.html
@@ -25,6 +25,9 @@
     <h1>Search</h1>
     <br><br><br>
     <h3>{{note}}</h3>
+    {% if not user.is_authenticated %}
+        <p> Contact deatails are hidden because you are not logged in. Please login to see them. </p>
+    {% endif %}
     <br>
     <ul style="color: white">
         <div id="wrap">
@@ -36,7 +39,9 @@
                 {%endif %} {%if sport.gender == "F"%}
                 <p style="text-align:left; display:inline;"> Female, {{sport.age}}</p>
                 {%endif %}
-                <p style="text-align:left">Phone: {{sport.phone}}</p>
+                {% if user.is_authenticated %}
+                    <p style="text-align:left">Phone: {{sport.phone}}</p>
+                {%endif%}
                 <p style="text-align:left">Experience Level: {{sport.experience}}</p>
                 <p style="text-align:left">Location: {{sport.city}}</p>
                 <br> {%endfor%}
