edit leaderboard and add min phone number length

--- a/teammatcherapp/templates/leaderboard.html
+++ b/teammatcherapp/templates/leaderboard.html
@@ -23,16 +23,16 @@
         <br><br><br><br><br>
         <h1>Leaderboard</h1>
         <p>The score shows how many times each user has won against another player or team they matched with using compete mode</p>
-        <br><br>
-        <ol style="color: white">
+        <br>
+        <ol style="color: white; font-size: 30pt;">
             <div id="wrap">
                 <div id="content">
                     {%for x in pos%}
                     <li><h3 style="text-align:left;">  {{x.name}} </h3></li>
                     <br>
-                    <p style="text-align:left;">Username: {{x.username}}</p>
-                    <p style="text-align:left;">Score: {{x.score}}</p>
-                    <br> {%endfor%}
+                    <p style="text-align:left; font-size: 15pt;">Username: {{x.username}}</p>
+                    <p style="text-align:left; font-size: 15pt;">Score: {{x.score}}</p>
+                    {%endfor%}
                 </div>
             </div>
         </ol> 
