--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -111,7 +111,7 @@
             {% endif %}
             <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
             <li class="nav-item">
-              <a class="nav-link" href="/gdpr">Privacy Policy</a>
+              <a class="nav-link" href="/gdpr/">Privacy Policy</a>
             </li>
           </ul>
         </div>
