--- a/teammatcherapp/templates/register.html
+++ b/teammatcherapp/templates/register.html
@@ -46,7 +46,7 @@
 <br>
 <div id="wrap">
     <div id="content">
-        <a href = "/accounts/login">Already have an account? Click here to log in</a>
+        <a href = "/accounts/login/">Already have an account? Click here to log in</a>
         <br><br><br>
         <form method="POST">
             {% csrf_token %} {{ form.as_p}} 
