make nav bar accessible

--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -66,7 +66,7 @@
     style="--bs-body-bg: #000000"
   >
     <nav
-      class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark"
+      class="navbar navbar-dark navbar-expand-lg bg-dark"
       id="mainNav"
     >
       <div class="container-fluid">
