Editable profile including password

--- a/teammatcherapp/templates/base.html
+++ b/teammatcherapp/templates/base.html
@@ -100,8 +100,8 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="/profile/"
-                >{{user.username}}'s Account</a
+              <a class="nav-link" href= /profile/{{user.username}}/
+                >{{user}}'s Account</a
               >
             </li>
             {% else %}
